--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "url": "http://github.com/eastbayjake/google-locations.git"
   },
   "dependencies": {
-    "underscore": "^1.8.3"
+    "https": "^1.0.0",
+    "underscore": "^1.8.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "vows": "^0.8.1",
